--- a/src/components/style/main.css
+++ b/src/components/style/main.css
@@ -4,3 +4,8 @@
 .display-toggle{
     display: none;
 }
+.reason-comment{
+    margin-top: 1.2rem;
+    border-radius: 4px 4px;
+    border-color: #ced4da;
+}
