--- a/src/style/main.css
+++ b/src/style/main.css
@@ -41,6 +41,7 @@ label{
   font-size: 20px;
   margin-bottom: 1rem;
   margin: 16px 0px 14px 5px;
+  color: #2d2d2d;
 }
 .fill-area{ 
   margin: 2rem;
@@ -71,4 +72,8 @@ a{
 .home-layout{
   justify-content: center;
   align-items: center;
+}
+
+.app-form-padding{
+  margin: 1rem 2rem;
 }
