--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Lora|PT+Serif');
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif; 
-  background-color: #f2f2f3a6;
+  font-family: 'PT Serif', serif;
+  box-sizing: border-box;
+  
 }
 
 .blurred-bg{
@@ -40,12 +43,12 @@ body {
 label{
   font-size: 20px;
   margin-bottom: 1rem;
-  margin: 16px 0px 14px 5px;
+  margin: 12px 0px 13px 5px;
   color: #2d2d2d;
 }
 .fill-area{ 
   margin: 2rem;
-  /* width: 60rem; */
+  width: 60rem;
   background-color: #cbcbced4;
   border-radius: 10px; 
   line-height: 0;
@@ -74,6 +77,6 @@ a{
   align-items: center;
 }
 
-.app-form-padding{
-  margin: 1rem 2rem;
+.form-pad{
+  padding: 2rem 0 2rem 0;
 }
