--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lora|PT+Serif');
 @import url('../components/applicationForm/applicationForm.css');
+@import url('../components/home/Home.css');
 body {
   margin: 0;
   padding: 0;
@@ -11,7 +12,7 @@ body {
 }
 
 .blurred-bg{
-  position: relative;
+  position: absolute;
 }
 .blurred-bg::before{
   z-index: -1;
@@ -28,23 +29,7 @@ body {
   
 }
 
-.links{
-    width: 30rem;
-    font-size: 2.5rem;
-    border-radius: 10px;
-    background: #cccbd087;
-    border-radius: 10px;  
-    padding: 2rem 2rem;
-}
+
 a{
   color: #2d2d2d;
 }
-.home{
-  display: flex;
-}
-.home-layout{
-  
-  justify-content: center;
-  align-items: center;
-}
-
