--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,19 +1,22 @@
 .links{
-    width: 30rem;
     font-size: 2.5rem;
-    border-radius: 10px;
-    background: #6666665e;
-    border-radius: 10px;  
-    padding: 2rem 2rem;
+     
     margin:0 auto;
     text-align: center;
     position: relative;
-    top: 20rem;
-    border: 1px solid #9d9d9d;
-   -webkit-box-shadow: 0 0px 11px 1px #6c757d63;
-    box-shadow: 0 0px 44px 7px #6c757d75;
+    top: 22rem;
 }
-
+.link{
+  margin: 0 2rem;
+  padding: 2rem 2rem;
+    width: 30rem;
+    border-radius: 10px;
+    background: #6666665e;
+    border-radius: 10px;  
+    border: 1px solid #9d9d9d;
+    -webkit-box-shadow: 0 0px 11px 1px #6c757d63;
+     box-shadow: 0 0px 44px 7px #6c757d75;
+}
 a{
     color: #2d2d2d;
   }
