--- a/src/components/applicationForm/applicationForm.css
+++ b/src/components/applicationForm/applicationForm.css
@@ -1,7 +1,7 @@
 
   .application-form{
     padding: 0;
-    margin-top: 4%;
+    margin-top: 1%;
   }
   .submit-position{
     margin-left: auto;
@@ -25,7 +25,8 @@
     margin-top: 1.2rem;
    
     }
-    .form-background{ 
+    .form-background{
+      margin-top: 2%; 
       background-color: #bababa78;
       border-radius: 10px;
       box-shadow: 0 0px 11px 1px #6c757d63;
@@ -44,6 +45,6 @@
     text-align: center;
     font-family: lora;
   }
- .row{
+ /* .row{
     padding-top: 2rem;
- }
+ } */
