--- a/src/components/applicationForm/applicationForm.css
+++ b/src/components/applicationForm/applicationForm.css
@@ -45,6 +45,11 @@
     text-align: center;
     font-family: lora;
   }
+
+  .errorMessage{
+    color: red;
+    text-decoration: underline;
+  }
  /* .row{
     padding-top: 2rem;
  } */
