--- a/src/components/applicationForm/applicationForm.css
+++ b/src/components/applicationForm/applicationForm.css
@@ -1,77 +1,73 @@
 
-  .application-form{
-    padding: 0;
-    margin-top: 1%;
-  }
-  .submit-position{
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    transform: scale(1.5)
-  } 
-   .form-control{
-     padding:0 2rem;
-   }
-   label{
-    font-size: 20px;
-   color: #2d2d2d;
-   margin-left: 1rem;
-   margin-bottom: 0.2rem;
- }
-  .reason-comment{
-    border-radius: 4px 4px;
-    border-color: #ced4da;
-    width: 100%;
-    margin-top: 1.2rem;
-   
-    }
+  /*.submit-position{*/
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    /*margin-bottom: 2rem;*/
+    /*margin-top: 1rem;*/
+    /*transform: scale(1.5)*/
+  /*} */
+   /*.form-control{*/
+     /*padding:0 2rem;*/
+   /*}*/
+   /*label{*/
+    /*font-size: 20px;*/
+   /*color: #2d2d2d;*/
+   /*margin-left: 1rem;*/
+   /*margin-bottom: 0.2rem;*/
+ /*}*/
+  /*.reason-comment{*/
+    /*border-radius: 4px 4px;*/
+    /*border-color: #ced4da;*/
+    /*width: 100%;*/
+    /*margin-top: 1.2rem;*/
+   /**/
+    /*}*/
     .form-background{
-      margin-top: 2%; 
+      margin-top: 3%;
       background-color: #bababa78;
       border-radius: 10px;
       box-shadow: 0 0px 11px 1px #6c757d63;
       border: 1px solid #dddde1;
     }
-  .display-toggle{
-    display: none;}
-  input, textarea, select{
-    box-shadow: inset 0 0 10px #00001c4d;
-  }
-  textarea:disabled{
-    background-color:  #ececec;
-  }
-  p{
-    text-decoration: underline;
-    text-align: center;
+  /*.display-toggle{*/
+    /*display: none;}*/
+  /*input, textarea, select{*/
+    /*box-shadow: inset 0 0 10px #00001c4d;*/
+  /*}*/
+  /*textarea:disabled{*/
+    /*background-color:  #ececec;*/
+  /*}*/
+  /*p{*/
+    /*text-decoration: underline;*/
+    /*text-align: center;*/
 
-  }
-  .info-message{
-    color: rgba(91, 93, 102, 1);
-    font-size: 15px;
-    position: absolute; 
-    /* margin-bottom: 1rem;  */
-    padding-left: 0.7rem;
-  }
-  .errorMessage{
-    color: red;
-    text-decoration: underline;
-  }
- /* .row{
-    padding-top: 2rem;
- } */
- /* .nationality-style{
-   margin-bottom: 1.5rem;
- } */
- input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-h4{
-  color: #404040;
-  text-decoration-line: underline;
-}
-input[type="date"]::-webkit-inner-spin-button { 
-  display: none;
-}
+  /*}*/
+  /*.info-message{*/
+    /*color: rgba(91, 93, 102, 1);*/
+    /*font-size: 15px;*/
+    /*position: absolute; */
+    /*!* margin-bottom: 1rem;  *!*/
+    /*padding-left: 0.7rem;*/
+  /*}*/
+  /*.errorMessage{*/
+    /*color: red;*/
+    /*text-decoration: underline;*/
+  /*}*/
+ /*!* .row{*/
+    /*padding-top: 2rem;*/
+ /*!*} *!*!*/
+  /*.nationality-style{*!*/
+   /*margin-bottom: 1.5rem;*/
+ /*}*/
+ /*input[type="number"]::-webkit-outer-spin-button,*/
+/*input[type="number"]::-webkit-inner-spin-button {*/
+    /*-webkit-appearance: none;*/
+    /*margin: 0;*/
+/*}*/
+/*h4{*/
+  /*color: #404040;*/
+  /*text-decoration-line: underline;*/
+/*}*/
+/*input[type="date"]::-webkit-inner-spin-button { */
+  /*display: none;*/
+/*}*/
