--- a/src/components/applicationForm/applicationForm.css
+++ b/src/components/applicationForm/applicationForm.css
@@ -11,10 +11,29 @@
       display: none;
       -webkit-appearance: none;
   }
-  input[type=date]::-webkit-inner-spin-button {
+  input[type="date"]::-webkit-inner-spin-button {
       -webkit-appearance: none;
       display: none;
   }
+  /*input[type="date"]::-webkit-calendar-picker-indicator {*/
+
+      /*color: rgba(0, 0, 0, 0);*/
+      /*opacity: 1*/
+  /*}*/
+  input[type="date"]::-webkit-calendar-picker-indicator {
+      background: transparent;
+      color: transparent;
+      cursor: pointer;
+      height: auto;
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 35px;
+  }
+  .form-group input {
+      position: relative;
+  }
+
   label{
       font-size: 1.2rem;
       color: #2d2d2d;
