--- a/src/components/applicationForm/applicationForm.css
+++ b/src/components/applicationForm/applicationForm.css
@@ -65,6 +65,7 @@
     }
 
     .form-background{
+      text-align: left;
       color: #212529de;
       margin: 3% 0;
       background-color: #bababa78;
