--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,28 +1,44 @@
 .links{
-    font-size: 2.5rem;
-    margin:0 auto;
     text-align: center;
-    position: relative;
-    top: 22rem;
+    padding-top: 11%;
+    font-size: 2.75rem;
+}
+.links p{
+    text-align: center;
+    margin-bottom: 6%;
 }
 .link{
     width: 40%;
     display: inline-block;
     margin: 0 2rem;
     padding: 2rem 2rem;
-    border-radius: 10px;
     background: #ddddddcf;
     border-radius: 10px;  
     border: 1px solid #9d9d9d;
     -webkit-box-shadow: 0 0px 11px 1px #6c757d63;
     box-shadow: 0 0px 44px 7px #6c757d75;
+    font-size: 0.75em;
+    margin-bottom: 5%;
 }
 a{
     color: #2d2d2d;
 }
-
   a:hover{
       color: rgb(67, 101, 156);
-    text-decoration-line: none;
+      text-decoration-line: none;
   }
-  
+ .greeting{
+
+ }
+ .greeting-part{
+     display: block;
+ }
+
+ @media (min-width: 340px) and (max-width: 640px){
+     .links{
+         font-size: 2rem;
+     }
+     .link{
+         width: 80%;
+     }
+ }
