--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -8,8 +8,26 @@
     /*font-size: 1.5rem;*/
     padding: .5rem 1rem;
     box-sizing: border-box;
-    margin-right: 0;
+
 }
+.navbar-style .navbar-element:first-child + .navbar-element{
+    border-left: 1px solid ;
+    border-right: 1px solid;
+}
+.navbar-element{
+    padding: 0 3%;
+    margin: 0 ;
+}
+
+/*.navbar-style .navbar-element:last-child{*/
+
+    /*border-right: 1px solid;*/
+/*}*/
+/*.navbar-element{*/
+    /*padding: 0 3%;*/
+    /*border-left: 1px solid ;*/
+    /*margin: 0 ;*/
+/*}*/
 
 .separation-line{
     border-bottom: 1px solid rgba(255,255,255,.1)
@@ -17,4 +35,10 @@
 
 .nav-text{
     color: #d7d7d7;
+}
+
+@media (min-width: 340px) and (max-width: 640px){
+    .navbar-element{
+        padding: 0 1rem 0 0;
+    }
 }
