--- a/src/style/main.css
+++ b/src/style/main.css
@@ -6,11 +6,13 @@
 @import url('../components/applicationForm/declaration/dectaration.css');
 @import url('../components/navbar/NavBar.css');
 body {
+  text-align: center;
   margin: 0;
   padding: 0;
   background-color: #f2f2f3a6;
   font-family: 'Rubik', sans-serif;
   box-sizing: border-box;
+  color: #313131;
   
 }
 
