--- a/src/components/applicationsList/requestModal/modal.css
+++ b/src/components/applicationsList/requestModal/modal.css
@@ -2,6 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    background-color: #000000a8;
     z-index: 9999999;
     top: 0;
     left: 0;
@@ -11,11 +12,37 @@
 }
 
 .modal-content {
-    border-radius:10px;
-    background: #000;
-    width: 80rem;
+    border-radius: 10px;
+    background: #dadadb;
     margin: 5vh auto 5vh auto;
     font-size: 30px;
-    padding: 0 3rem;
-    color: #ffffff;
+    padding: 0 4rem 4rem;
+}
+
+.user-list th {
+    background-color: #dadadb;
+}
+
+.user-list {
+    text-align: left;
+    margin: 0 auto;
+    font-size: 1rem;
+    width: 100%;
+}
+
+.user-list btn-secondary {
+    margin-top: 1rem;
+    border: none;
+    background-color: #3a3a3a;
+
+}
+
+.user-list btn-secondary:active{
+    border: none;
+}
+
+@media (min-width: 818px) {
+    .modal-content{
+        width: 50rem;
+    }
 }
